--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -19,3 +19,7 @@ h1 {
 .title .headline {
     font-family: 'Prompt', sans-serif !important;
 }
+
+.v-application .headline {
+    font-family: 'Prompt', sans-serif !important;
+}
