remove moment locale

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -43,7 +43,7 @@ h1 {
 .drawer-link {
     text-decoration: none;
     color: #212121 !important;
-    font-size: 4vw;
+    font-size: 14pt;
 }
 
 .bold {
