--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -42,7 +42,8 @@ h1 {
  
 .drawer-link {
     text-decoration: none;
-    color: #212121 !important;
+    /* color: #212121 !important; */
+    color: turquoise !important;
     font-size: 14pt;
 }
 
