add all sessions to counter

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -54,3 +54,7 @@ h1 {
 .headline {
     font-family: 'Prompt', sans-serif !important;
 }
+
+.v-application .title {
+    font-family: 'Prompt', sans-serif !important;
+}
